Fixed dark mode

--- a/src/sass/components/_filter-btn.scss
+++ b/src/sass/components/_filter-btn.scss
@@ -3,6 +3,7 @@
     justify-content: center;
 }
 
+
 .filter__list {
     @media screen and (min-width: $tablet) {
     display: flex;
@@ -12,7 +13,7 @@
 }
 
 .filter__item:not(:last-child) {
-    @media screen and (max-width: $tablet) {
+    @media screen and (max-width: 767px) {
     margin: 8px auto;
     }
 
@@ -42,6 +43,33 @@
         1px 4px 6px rgba(116, 63, 30, 0.2);
     }
     
+}
+
+.darkmode--activated .filter__btn {
+    background-color: $text-color-black;
+    &:hover,
+    &:focus {
+            background-color: $hover-orange;
+            color: $text-color-white;
+            cursor: pointer;
+            box-shadow: 0px 4px 12px rgba(75, 49, 20, 0.2), 0px 4px 4px rgba(92, 63, 27, 0.2),
+                1px 4px 6px rgba(116, 63, 30, 0.2);
+        }
+}
+
+@media screen and (max-width: 767px) {
+    .darkmode--activated .filter__btn {
+            background-color: $text-color-white;
+            color: #0094f7;
+            border-color: #0094f7;
+
+            &:hover,
+            &:focus {
+                color: $text-color-black;
+                background-color: #0094f7;
+                box-shadow: none;
+            }
+}
 }
 
 .filter__btn.active {
