--- a/src/sass/components/_footer-modal.scss
+++ b/src/sass/components/_footer-modal.scss
@@ -28,6 +28,7 @@
   padding-right: 20px;
   background-color: #ffffff;
 
+
   @media screen and (min-width: 480px) {
     position: absolute;
     top: 50%;
@@ -43,6 +44,11 @@
   @media screen and (min-width: $desktop) {
     width: 800px;
   }
+}
+
+.darkmode--activated .footer__modal {
+  background-color: #272727;
+  color: $hover-orange;
 }
 
 .footer__modal-backdrop.is-hidden .footer__modal {
@@ -90,6 +96,11 @@
   @media screen and(min-width: $desktop) {
     width: calc((100% - 5 * 15px) / 5);
   }
+}
+
+.darkmode--activated .student-card {
+  background-color: #272727;
+  color: $hover-orange;
 }
 
 .student-card__image {
