--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -47,4 +47,9 @@
   display: block;
   margin-left: 10px;
   margin-right: 10px;
+  fill: $hover-orange;
+}
+
+.darkmode--activated .footer__icon-heart {
+  fill: #0094f7;
 }
